##*****************************************************************************
## $Id: Makefile.am,v 1.7 2005-06-20 16:53:24 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

# 
# With LTL_LIBRARIES, the libraries must be ordered correctly, or
# libtool has trouble with installations.
#

SUBDIRS = cerebro_error \
	  cerebro \
	  common \
	  modules \
	  include \
	  util 
