##*****************************************************************************
## $Id: Makefile.am,v 1.8 2005-06-21 22:29:07 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

# 
# With LTL_LIBRARIES, the libraries must be ordered correctly, or
# libtool has trouble with installations.
#

SUBDIRS = cerebro_error \
	  cerebro \
	  common \
	  modules \
	  include \
	  util \
	  wrappers
