##*****************************************************************************
## $Id: Makefile.am,v 1.9 2005-06-25 00:14:28 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

# 
# With LTL_LIBRARIES, the libraries must be ordered correctly, or
# libtool has trouble with installations.
#

SUBDIRS = cerebro_error \
	  cerebro \
	  common \
	  debug \
	  modules \
	  include \
	  util \
	  wrappers
