##*****************************************************************************
## $Id: Makefile.am,v 1.6.4.1 2006-10-17 06:18:12 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = clusterlist config event metric monitor
