##*****************************************************************************
## $Id: Makefile.am,v 1.7 2006-11-08 00:34:04 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = clusterlist config event metric monitor
