##*****************************************************************************
## $Id: Makefile.am,v 1.2 2005-08-25 22:04:32 achu Exp $
##*****************************************************************************

noinst_HEADERS	    = debug.h

noinst_LTLIBRARIES  = libdebug.la
libdebug_la_CFLAGS  = -I$(srcdir)/../include
libdebug_la_SOURCES = debug.c

force-dependency-check:
