##*****************************************************************************
## $Id: Makefile.am,v 1.7 2006-02-22 06:08:28 chu11 Exp $
##*****************************************************************************

include_HEADERS        = cerebro.h
nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
			 cerebro/cerebro_config.h \
			 cerebro/cerebro_config_module.h \
			 cerebro/cerebro_constants.h \
			 cerebro/cerebro_error.h \
			 cerebro/cerebro_metric_module.h \
			 cerebro/cerebro_monitor_module.h
			 cerebro/cerebro_metric_server_protocol.h \
			 cerebro/cerebro_metric_control_protocol.h \
			 cerebro/cerebrod_heartbeat_protocol.h
