##*****************************************************************************
## $Id: Makefile.am,v 1.11 2006-11-15 00:12:30 chu11 Exp $
##*****************************************************************************

include_HEADERS        = cerebro.h
nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
			 cerebro/cerebro_config.h \
			 cerebro/cerebro_config_module.h \
			 cerebro/cerebro_constants.h \
			 cerebro/cerebro_error.h \
			 cerebro/cerebro_event_module.h \
			 cerebro/cerebro_event_protocol.h \
			 cerebro/cerebro_metric_module.h \
			 cerebro/cerebro_monitor_module.h \
			 cerebro/cerebro_metric_server_protocol.h \
			 cerebro/cerebro_metric_control_protocol.h \
			 cerebro/cerebrod_message_protocol.h
